--- a/_config.yml
+++ b/_config.yml
@@ -62,7 +62,7 @@ assets:         /assets
 feed:           /feed
 
 # Used in atom feed, sitemap, Twitter Cards, and etc. I should use absolute full URLs for these fields
-url:            http://mxs.sbrk.org
+url:            http://techno.sbrk.org
 
 # Media assets URL used in posts, without trailing slash. ie. `<img href="{{ site.file }}/image.png">`. In the most cases this URL should be powered by a CDN provider
 file:           http://mxs.sbrk.org/static
