--- a/_config.dev.yml
+++ b/_config.dev.yml
@@ -6,7 +6,7 @@
 base:           null
 
 # CDN location for development
-file:           http://sparanoid.s3-website-us-east-1.amazonaws.com
+# file:           http://sparanoid.s3-website-us-east-1.amazonaws.com
 # file:           http://d349cztnlupsuf.cloudfront.net
 
 # Force UTF-8 since local server doesn't send charset in their respond header
