Added writings page as well as an intro page for Norway.

--- a/_app/_data/nav.yml
+++ b/_app/_data/nav.yml
@@ -15,8 +15,8 @@
   cate:  photo
 
 - title: ">"
-  url:   /note/
-  cate:  note
+  url:   /writings/
+  cate:  writings
 
 - title: ";"
   url:   /code/
