--- a/_config.yml
+++ b/_config.yml
@@ -44,7 +44,7 @@ redcarpet:
 #
 
 # Site name
-name:           Almace Scaffolding
+name:           Random Words
 
 # Site description, will appear in the document meta and Atom feed subtitle
 description:    I make things.
