--- a/_config.yml
+++ b/_config.yml
@@ -44,10 +44,10 @@ redcarpet:
 #
 
 # Site name
-name:           Stuff
+name:           Follow the White Rabbit
 
 # Site description, will appear in the document meta and Atom feed subtitle
-description:    I make things.
+description:    Some words about some things that somehow caught my interest.
 
 # Base URL, this is useful when I need to build site in a sub-directory (like GitHub Pages for Projects), it provides a specific URL prefix, for example, if the production site URL is http://sparanoid.com/lab/version/, set `base` to `/lab/version/24`, without trailing slash.
 # Default:      null
@@ -62,13 +62,13 @@ assets:         /assets
 feed:           /feed
 
 # Used in atom feed, sitemap, Twitter Cards, and etc. I should use absolute full URLs for these fields
-url:            http://techno.sbrk.org
+url:            http://mxs.sbrk.org
 
 # Media assets URL used in posts, without trailing slash. ie. `<img href="{{ site.file }}/image.png">`. In the most cases this URL should be powered by a CDN provider
-file:           http://techno.sbrk.org
+file:           http://mxs.sbrk.org
 
 # Download files URL used in posts, ie. href="{{ site.download }}/package.zip", this should also be a CDN link just like `site.url`. There's no differences in `site.url` and `site.download`, I just use one CDN for post images and another for large download files. That's it. Remove or ignore this if you don't need it
-download:       http://techno.sbrk.org/data
+download:       http://mxs.sbrk.org/data
 
 # User related information
 # {{ site.profile.user }}: author name, used in post pages, and atom feed
@@ -83,8 +83,8 @@ profile:
   twitter:
     creator:    aimxhaisse
     site:       mxs
-  google_plus:  aimxhaisse
-  donate:       http://mxs.sbrk.org
+#  google_plus:  aimxhaisse
+#  donate:       http://mxs.sbrk.org
 
 # Enable this settings to make your feed Daring Fireball-like link blog
 # (This basically change your <link> value to external link you defined in your posts)
@@ -110,22 +110,3 @@ credits:        true
 # Force UTF-8 encoding, enable this will simply add <meta charset=utf-8> to the head of your pages
 # Default:      false
 force_utf_8:    true
-
-#
-# Custom distribution variables
-#
-
-# SSH remote server hostname
-remote_host:    caladbolg
-
-# Prevent them from being deleted on server (rsync --delete), these files and directories are available on the remote server but outside this git repo. I need to ignore them.
-ignore_files:   --exclude=lab
-
-# Media assets sync'ed using s3cmd
-# static_files:   ~/Dropbox/Sites/static.sparanoid.com/
-
-# Remote server root directory
-# remote_dir:     /srv/www/sparanoid.com/public_html
-
-# Amazon S3 Bucket variable for s3cmd
-# s3_bucket:      s3://sparanoid/
