Removed useless meta.

--- a/_config.yml
+++ b/_config.yml
@@ -44,7 +44,7 @@ redcarpet:
 #
 
 # Site name
-name:           Follow the White Rabbit
+name:           2+2=5
 
 # Site description, will appear in the document meta and Atom feed subtitle
 description:    Some words about some things that somehow caught my interest.
