--- a/_config.dev.yml
+++ b/_config.dev.yml
@@ -1,13 +1,5 @@
 #
-# Jekyll serve settings
+# Jekyll dev settings
 #
 
-# Reset base to root for localhost development
-base:           null
-
-# CDN location for development
-# file:           http://sparanoid.s3-website-us-east-1.amazonaws.com
-# file:           http://d349cztnlupsuf.cloudfront.net
-
-# Force UTF-8 since local server doesn't send charset in their respond header
-force_utf_8:    true
+port:    20000
